
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
memchar() {
 char x, *p;

 &x, &p;
 x = *p++;
 x = *++p;
 x = *p--;
 x = *--p;
}
