; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_incr.c_memchar.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_incr.c_memchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memchar() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8, align 1
  %3 = alloca i8*, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = getelementptr inbounds i8, i8* %4, i32 1
  store i8* %5, i8** %3, align 8
  %6 = load i8, i8* %4, align 1
  store i8 %6, i8* %2, align 1
  %7 = load i8*, i8** %3, align 8
  %8 = getelementptr inbounds i8, i8* %7, i32 1
  store i8* %8, i8** %3, align 8
  %9 = load i8, i8* %8, align 1
  store i8 %9, i8* %2, align 1
  %10 = load i8*, i8** %3, align 8
  %11 = getelementptr inbounds i8, i8* %10, i32 -1
  store i8* %11, i8** %3, align 8
  %12 = load i8, i8* %10, align 1
  store i8 %12, i8* %2, align 1
  %13 = load i8*, i8** %3, align 8
  %14 = getelementptr inbounds i8, i8* %13, i32 -1
  store i8* %14, i8** %3, align 8
  %15 = load i8, i8* %14, align 1
  store i8 %15, i8* %2, align 1
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
